[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Obj_Bomb.gd" type="Script" id=1]
[ext_resource path="res://Resources/SpritesPersonaje/pickup_016_bomb.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Explode"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.783955, 0.883955, 0.983955, 1.08396, 1.28395, 1.38396, 1.48395 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.945098, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.913725, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.945098, 1, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0.913725, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3, 0.983955, 1.08396 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.9 ), Vector2( 1, 0.8 ), Vector2( 1, 0.9 ), Vector2( 1, 0.8 ), Vector2( 1, 0.8 ), Vector2( 1, 0.9 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.9 ), Vector2( 1, 0.8 ), Vector2( 1, 0.9 ), Vector2( 1, 0.8 ), Vector2( 1, 0.8 ), Vector2( 1, 0.85 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CircleShape2D" id=4]
radius = 12.0

[node name="Obj_Bomb" type="RigidBody2D"]
collision_layer = 12
collision_mask = 12
mode = 2
mass = 2.4
contacts_reported = 1
contact_monitor = true
can_sleep = false
linear_damp = 1.5
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explode = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
texture = ExtResource( 2 )
vframes = 6
hframes = 6

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 3 )
z_index = 1
texture = ExtResource( 2 )
vframes = 6
hframes = 6

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 13, 0 )
collision_mask = 15

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Obj_Bomb_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Obj_Bomb_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
